objects/PC_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>endpoint_Url__c</fullName>
        <label>endpoint Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>